# salient-tutor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.omo/drafts/: salient-tutor-effectiveness-hardening.md
.omo/plans/: salient-tutor-effectiveness-hardening.md
data/: learning_methods_catalog.json  pedagogy_bundle.json
data/curricula/: ai-foundations.json  neuroscience-fundamentals.json
data/extracted/: learning-methods.txt
docs/: HOWTO.md  MNEMONIC_BIBLE.md  MNEMONIC_INTEGRATION_PLAN.md  TODO.md  design-research.md  diagrams.md  p0-implementation-plan.md  pr23-design-themes-plan.md
docs/screenshots/: README.md
prompts/: judge.md  librarian.md  semantic_router.md  tutor.md
prompts/skills/: image_authoring.md  keyword_authoring.md  palace_authoring.md  verse_authoring.md
scripts/: ci.sh  lint.sh  smoke_judge_deepseek.py
src/salient_tutor/: __init__.py  cli.py  daemon.py  diagrams.py  export.py  illustrations.py  image_cloud.py  lesson.py  lesson_store.py  minimax_tts.py  pedagogy.py  providers.py  read_containment.py  reviewlog.py  study.py  web.py
tests/: test_agent_config_api.py  test_boundary_sync.py  test_codex_runner.py  test_config_api.py  test_consensus_panel.py  test_diagram_api.py  test_embed_config_api.py  test_export.py  test_image_api.py  test_image_cloud.py  test_judge_prompt.py  test_lesson_store.py  test_librarian_config_api.py  test_librarian_prompt.py  test_lms_api.py  test_pedagogy.py  test_pedagogy_filter.py  test_quiz_api.py  test_quiz_review.py  test_scheduler.py  test_second_opinion_api.py  test_skill_graph.py  test_skillmap_api.py  test_study_store.py  test_study_upload_api.py  test_tutor_prompt.py
tools/: build_memory_palace.py  transform_learning_catalog.py
web/static/: app.css  index.html
web/static/css/: app.css
web/static/js/: tutor.js
